--- a/Proyecto/src/Interfaz/PrincipalUsuarios.form
+++ b/Proyecto/src/Interfaz/PrincipalUsuarios.form
@@ -6,7 +6,7 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Option"/>
+            <Property name="text" type="java.lang.String" value="Opciones"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu1ActionPerformed"/>
