--- a/Proyecto/src/Interfaz/PrincipalUsuarios.form
+++ b/Proyecto/src/Interfaz/PrincipalUsuarios.form
@@ -9,6 +9,7 @@
             <Property name="text" type="java.lang.String" value="Opciones"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenu1MouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu1ActionPerformed"/>
           </Events>
           <SubComponents>
@@ -24,6 +25,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Comprar Pelicula"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="optInicioSesion">
               <Properties>
